# ai-job-portal

./: .dockerignore  .env.deploy  .env.dev.example  .env.example  .env.services.example  .eslintrc.js  .gitattributes  .gitignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  GETTING_STARTED.md  README.md  amplify.yml  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-cognito.html  tsconfig.base.json  tsconfig.json  turbo.json
.claude/: settings.local.json
DOCS/: CLAUDE.md  DOCKER_BEST_PRACTICES.md  STATEMENT_OF_WORK.md  job-questions-usage.md
database/: schema.sql
docker/: .env.docker  .env.docker.example  Dockerfile.db-init  docker-compose.yml  init-localstack.sh
docs/: ai-tools.md  database.dbml  database.erd.json
infra/nightly-shutdown/lambda/: pyproject.toml
infra/nightly-shutdown/lambda/src/: orchestrator.py
infra/nightly-shutdown/lambda/src/controllers/: ecs_controller.py  rds_controller.py  valkey_controller.py
infra/nightly-shutdown/lambda/src/handlers/: alert_formatter.py  shutdown_handler.py  startup_handler.py
infra/nightly-shutdown/lambda/src/state/: memory.py  ssm.py
infra/nightly-shutdown/lambda/tests/: test_orchestrator.py
infra/nightly-shutdown/lambda/tests/controllers/: test_ecs_controller.py  test_rds_controller.py  test_valkey_controller.py
infra/nightly-shutdown/lambda/tests/handlers/: test_alert_formatter.py
infra/nightly-shutdown/lambda/tests/state/: test_ssm_state_store.py
infrastructure/: cloudformation.yaml  deploy.sh
public/: docs.html  (+1 more)
(+1091 files in other folders)
